# GameEngine

./: CMakeLists.txt  main.cpp
game/: Event.h  Game.cpp  Game.h
platform/: LinuxPlatform.cpp  LinuxPlatform.h  PlatformLayer.h  SPSCQueue.h  Singelton.h  WindowsPlatform.cpp  WindowsPlatform.h
ui/: Drawable.cpp  Drawable.h
ui/basics/: RoundRect.cpp  RoundRect.h
ui/clickable/: Clickable.cpp  Clickable.h
ui/clickable/clickables/: Button.cpp  Button.h  Slider.cpp  Slider.h
ui/nonInteractive/: Menu.cpp  Menu.h
ui/text/: TextBox.cpp  TextBox.h
windows/: window.cpp
